# SigV4-for-AWS-IoT-embedded-sdk-1

./: CMakeLists.txt  main.c
source/: sigv4.c
source/include/: sigv4.h  sigv4_config_defaults.h  sigv4_internal.h
test/cbmc/proofs/SigV4_GenerateHTTPAuthorization/: SigV4_GenerateHTTPAuthorization_harness.c
